Subtitle font-spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ a:hover, #indexhamburger:hover{
 .nav_title h2 {
 	font-size: 1.02em;
 	font-weight: 300;
-	letter-spacing: 0.2em;
+	letter-spacing: 0.22em;
 }
 
 #navbar_content {
